increased tests coverage